--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".SubActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".DetailActivity"
@@ -41,8 +37,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:launchMode="singleTask"></activity>
+            android:exported="true"
+            android:launchMode="singleTask">
+
+        </activity>
     </application>
 
 </manifest>
