--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".SubActivity"
-            android:exported="false">
-
+            android:exported="true">
         </activity>
         <activity
             android:name=".DetailActivity"
