--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,10 +36,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:launchMode="singleTask">
-
-        </activity>
+            android:exported="false"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
